<resources>
    <string name="app_name">彩8</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marque_text">松开刷新数据松开刷新数据松开刷新数据松开刷新数据</string>
    <string name="index_home">首页</string>
    <string name="index_lottery">购彩大厅</string>
    <string name="index_match">比赛</string>
    <string name="index_open">开奖</string>
    <string name="index_msg">消息</string>
    <string name="index_own">我的</string>
    <string name="test_btn">测试按钮</string>

    <string name="money_access">存/取款</string>
    <string name="lottery_result">开奖结果</string>
    <string name="order_person">我的订单</string>
    <string name="act_discount">优惠活动</string>
    <string name="lottery_hot">热门彩种</string>
    <string name="lottery_lucky">最新中奖榜</string>
    <string name="login_account">登录账号</string>
    <string name="login_password">登录密码</string>
    <string name="login_sign">登录</string>
    <string name="login_reg">免费注册</string>
    <string name="login_demo">免费试玩</string>
</resources>
