<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false">

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imv_nav_home"
                android:layout_width="@dimen/bar_bot_img_size"
                android:layout_height="@dimen/bar_bot_img_size"
                android:layout_above="@+id/tv_nav_home"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/bar_bot_txt_mt"
                android:background="@mipmap/bot_home" />

            <TextView
                android:id="@+id/tv_nav_home"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_bot_txt_size"
                android:layout_alignParentBottom="true"
                android:gravity="center|bottom"
                android:padding="2dp"
                android:text="@string/index_home"
                android:textSize="@dimen/bar_bot_font_s" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imv_nav_buy"
                android:layout_width="@dimen/bar_bot_img_size"
                android:layout_height="@dimen/bar_bot_img_size"
                android:layout_above="@+id/tv_nav_buy"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/bar_bot_txt_mt"
                android:background="@mipmap/bot_bet" />

            <TextView
                android:id="@+id/tv_nav_buy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_bot_txt_size"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center"
                android:padding="2dp"
                android:text="@string/index_lottery"
                android:textSize="@dimen/bar_bot_font_s" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/dd5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:src="@drawable/shape_hollow" />

            <TextView
                android:id="@+id/tv_nav_med"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_bot_txt_size"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center"
                android:padding="2dp"
                android:text="@string/index_match"
                android:textSize="@dimen/bar_bot_font_s" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imv_hot_lot"
                android:layout_width="@dimen/bar_bot_img_size"
                android:layout_height="@dimen/bar_bot_img_size"
                android:layout_above="@+id/tv_nav_lot"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/bar_bot_txt_mt"
                android:background="@mipmap/bot_log" />

            <TextView
                android:id="@+id/tv_nav_lot"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_bot_txt_size"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center"
                android:padding="2dp"
                android:text="@string/index_msg"
                android:textSize="@dimen/bar_bot_font_s" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imv_nav_own"
                android:layout_width="@dimen/bar_bot_img_size"
                android:layout_height="@dimen/bar_bot_img_size"
                android:layout_above="@+id/tv_nav_own"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/bar_bot_txt_mt"
                android:background="@mipmap/bot_me" />

            <TextView
                android:id="@+id/tv_nav_own"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_bot_txt_size"
                android:layout_alignParentBottom="true"
                android:gravity="bottom|center"
                android:padding="2dp"
                android:text="@string/index_own"
                android:textSize="@dimen/bar_bot_font_s" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>