<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <android.support.v4.view.ViewPager
                    android:id="@+id/vp_banner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/banner_vp"
                    android:background="@color/gray" />

                <RelativeLayout
                    android:id="@+id/rl_notice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/notice_container"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imv_notice"
                        android:layout_width="@dimen/notice_imv"
                        android:layout_height="@dimen/notice_imv"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/notice" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/imv_notice"
                        android:layout_toRightOf="@+id/imv_notice">

                        <com.forum.lot.view.marqueeview.MarqueeView
                            android:id="@+id/mqv_notice"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            app:speed="40dp"
                            app:text_color="@color/bg_blue"
                            app:text_shadowColor="@android:color/black"
                            app:text_size="16sp"
                            app:txt_dx="1.0"
                            app:txt_dy="1.0"
                            app:txt_radius="1.0"
                            app:txt_spacing="15dp" />
                    </FrameLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:id="@+id/rl_shortcut"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/tv_money"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/money_access" />

                    <TextView
                        android:id="@+id/tv_lottery_result"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/lottery_result" />

                    <TextView
                        android:id="@+id/tv_order_person"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/order_person" />

                    <TextView
                        android:id="@+id/tv_act_discount"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/act_discount" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/hot_lottery_h"
                    android:layout_marginEnd="@dimen/hot_lottery_mt"
                    android:layout_marginLeft="@dimen/hot_lottery_mt"
                    android:layout_marginRight="@dimen/hot_lottery_mt"
                    android:layout_marginStart="@dimen/hot_lottery_mt"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center|start"
                        android:text="@string/lottery_hot" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 热门彩种GridView ???-->
                <com.forum.lot.view.grid.BorderGridView
                    android:id="@+id/bgv_hot_lottery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:numColumns="2"
                    app:horizontalBorderColor="@color/gray"
                    app:horizontalBorderWidth="1dp"
                    app:verticalBorderColor="@color/gray"
                    app:verticalBorderWidth="1dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 最新中奖榜 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/hot_lottery_h"
                    android:layout_marginEnd="@dimen/hot_lottery_mt"
                    android:layout_marginLeft="@dimen/hot_lottery_mt"
                    android:layout_marginRight="@dimen/hot_lottery_mt"
                    android:layout_marginStart="@dimen/hot_lottery_mt"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/colorAccent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center|start"
                        android:text="@string/lottery_lucky" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <ListView
                    android:id="@+id/lv_lot_lucky"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>